# Flask-portfolio

./: .env.sample  .gitignore  README.md  config.py  pyproject.toml  requirements.dev.txt  requirements.txt  requirments.txt  wsgi.py
app/: __init__.py
app/forms/: __init__.py  company.py  employee.py
app/models/: __init__.py  company.py  employee.py  utils.py
app/static/css/: main.css
app/templates/: about.html  base.html  index.html
app/templates/auth/: forgot_password.html  login.html  password_reset.html
app/templates/common/: header.html
app/templates/company/: companies.html  company_creation.html  company_creation_profile.html  company_profile.html
app/templates/employee/: employee_creation_profile.html  employees.html
app/views/: __init__.py  auth.py  company.py  employee.py  main.py
docker/: Dockerfile
migrations/versions/: 0227b7f8f42e_.py  0634005ce014_.py  08af6703ef8d_.py  1e423566a4ae_.py  3bf78cc20320_.py  47134be45986_.py  556e00a5325c_.py  577b02e188aa_.py  6a3e8108ccab_.py  a20083aab617_.py  af2a33ad2456_.py  b8bd4d4170fa_.py
